Rename files and project

--- a/Hello-World-SDK-3.vcxproj
+++ b/Hello-World-SDK-3.vcxproj
@@ -15,6 +15,7 @@
     <SccLocalPath />
     <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
     <ProjectGuid>{6FFF2575-D382-4E80-8493-4A674A6AD92C}</ProjectGuid>
+    <ProjectName>nightLightControls</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -148,7 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Hello-World-SDK-3.cpp" />
+    <ClCompile Include="nightLights.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
